# chiptune-8bit-player

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
scripts/: gen-favicon.mjs  verify-icons.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/librespot/: mod.rs
src-tauri/src/spotify/: api.rs  auth.rs  mod.rs  models.rs  token_store.rs
src/components/: AboutDialog.tsx  AppContextMenu.tsx  ContextMenu.tsx  KeyboardShortcutsDialog.tsx  Library.tsx  LibrespotWarningDialog.tsx  NowPlaying.tsx  RecordPlayer.tsx  SettingsButton.tsx  SettingsDrawer.tsx  SpotifyContextMenu.tsx  SpotifyPanel.tsx  SpotifyPlaylistContextMenu.tsx  ThemeSwitcher.tsx  TitleBar.tsx  TrackInfoDialog.tsx  TransportControls.tsx
src/i18n/: I18nProvider.tsx  useT.ts
src/i18n/locales/: en.json  fr.json
src/lib/: addAudioFiles.ts  audio.ts  favicon.ts  libraryPersistence.ts  metadata.ts  pixelate.ts  preferences.ts  spotify.ts
src/lib/playback/: engine.ts  librespotProvider.ts  localProvider.ts  spotifySdkProvider.ts  types.ts
src/state/: usePlayerStore.ts  useSpotifyStore.ts
src/styles/: 8bit.css  settings.css  spotify.css  titlebar.css
src/themes/: engine.ts  patterns.ts  types.ts
src/themes/definitions/: artistic.ts  classic-consoles.ts  crt-terminal.ts  index.ts  music-audio.ts  nature-mood.ts  retro-computers.ts
