[package]
name = "chiptune-8bit-player"
version = "0.1.0"
description = "An 8-bit themed record-player audio app for local music files"
authors = ["ChezMarty"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chiptune_8bit_player_lib"
# Re-add "cdylib" if/when we ship iOS/Android: cdylib is needed for
# Tauri's mobile entry point on iOS/Android. We drop it here because
# lld-link uses a 16-bit symbol table for Windows PE exports, and a
# Tauri + wry + webview2-com + windows-sys + windows-targets build
# produces >65,535 exported symbols, exceeding the cap and failing
# the link with `too many exported symbols (got NNNNN, max 65535)`.
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Pin vergen to 9.0.6 to match the version expected by vergen-gitcl 1.0.x
# (transitively used by librespot-core's build script).
# See https://github.com/rustyhorde/vergen/issues/478
vergen = "=9.0.6"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
tokio = { version = "1", features = ["net", "io-util"] }
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }

# Rustls CryptoProvider — must be installed before any TLS code runs.
# Both reqwest (rustls-tls) and librespot (via its HTTP client deps) use
# rustls 0.23+, which no longer auto-selects a crypto provider at runtime.
# We explicitly use the `ring` provider.
rustls = { version = "0.23", features = ["ring"] }

# Logging — capture librespot's internal log messages (error!, warn!, debug!)
log = "0.4"

# Librespot for direct Spotify audio streaming
librespot-core = { version = "0.8", default-features = false, features = ["rustls-tls-webpki-roots"] }
librespot-playback = { version = "0.8", default-features = false, features = ["rustls-tls-webpki-roots"] }

